# browser-game-backend-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: DB_manager.h  collision_detector.cpp  collision_detector.h  extra_data.cpp  extra_data.h  model.cpp  model.h  model_core.h  model_serialization.h  request_handler.h  save_manager.h  tagged.cpp
tests/: collision-detector-tests.cpp
